[package]
name = "coin-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
chrono = "0.4.23"
coingecko = "1.0.1"
futures = "0.3.26"
httpmock = "0.6.7"
rayon = "1.6.1"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.92"
tokio = "1.25.0"
web = "0.2.12"

[dev-dependencies]
mockito = "0.31.1"
